<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/topMargin"
        android:hint="@string/enter_title"
        android:textAlignment="center"
        android:textSize="@dimen/titleText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:layout_marginTop="@dimen/topMargin">

        <Button
            android:id="@+id/buttonChangeFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="changeFoto"
            android:text="@string/change_foto"
            android:visibility="visible" />

        <Button
            android:id="@+id/addFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="makeFoto"
            android:text="@string/foto"
            android:visibility="visible" />

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="false"
            android:onClick="addRecipe"
            android:text="@string/add"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_and_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/rightMargin"
            android:layout_weight="1"
            android:scrollbarSize="@dimen/titleText" />

        <EditText
            android:id="@+id/recipe_quantity_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:hint="@string/enter_quantity"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:clickable="false"
        android:onClick="addProduct"
        android:text="@string/add_product" />


</LinearLayout>